# garmin-running-data-normalizer

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PLATFORM_EVOLUTION.md  QUICK_START.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
config/: dataset_registry.example.json  dataset_registry.example.yaml
docs/: README.md  architecture_overview.md  dataset_relationships.md  dependency_license_inventory.md  existing_asset_reuse_matrix.md  github_public_readiness_checklist.md  known_limitations.md  migration_notes.md  output_contract.md  product_changelog.md  product_quick_start.md  project_boundary.md  project_charter.md  release_readiness.md  roadmap.md  sample_data_policy.md  security_and_privacy_boundary.md  source_inspection_summary.md  supported_datasets.md  third_party_notices_draft.md
docs/case_studies/: from_garmin_export_to_reproducible_analysis_handoff_v0_1.md
docs/project/: analysis_handoff_spec_v0_1.md  analysis_prompt_template_v0_1.md  architecture_overview.md  codex_application_readiness_roadmap_v0_1.md  commit_and_push_plan_v0_1.md  definition_of_done.md  github_prerelease_execution_plan_v0_2.md  m5_5_readiness_handoff_v0_1.md  m5_5b_validation_plan_v0_1.md  m5_analysis_value_evidence_index_v0_1.md  m5_case_study_candidates_v0_1.md  m6_preparation_recommendations_v0_1.md  m7_1_fit_migration_poc_report_v0_1.md  m7_2_sleep_migration_poc_report_v0_1.md  m7_3_hrv_migration_poc_report_v0_1.md  m7_4_health_status_migration_poc_report_v0_1.md  m8_1_stable_readiness_report_v0_1.md  m8_3_release_candidate_validation_report_v0_1.md  m8_5_stable_release_closeout_report_v0_1.md  p0_pypi_packaging_readiness_report_v1_0.md  p1_pypi_publication_runbook_v1_0.md  p1_pypi_publish_readiness_report_v1_0.md  (+26 more)
runtime/: README.md  implementation_task_initial_prompt.md  project_core_review_initial_prompt.md  project_runtime_addendum.md
schemas/: dataset_registry.schema.json
scripts/: static_policy_scan.py  validate_bootstrap.py  validate_platform_alignment.py  validate_public_history.py
templates/: README.md
tests/: fit_fixture_factory.py  test_bootstrap.py  test_common_and_policies.py  test_fit_and_analysis_pack.py  test_golden_path.py  test_health_status_normalizer.py  test_hrv_normalizer.py  test_intake_and_normalizers.py  test_output_experience.py  test_packaging_readiness.py  test_pypi_publish_workflow.py  test_relationships.py  test_run_all.py  test_sleep_normalizer.py  test_standalone.py  test_static_policy.py
(+127 files in other folders)
